package com.avasaysayava.bagrutproject.game;

import android.graphics.PointF;
import android.util.Pair;

public class LineF extends Pair<PointF, PointF> {
    public LineF(PointF first, PointF second) {
        super(first, second);
    }
}
